feat(ajeitando a home e começando a fazer a página de gestão de bancas, ainda falta finalizar o login)

--- a/src/components/Dropdown/index.module.scss
+++ b/src/components/Dropdown/index.module.scss
@@ -43,7 +43,7 @@
         justify-content: center;
         flex-wrap: wrap;
 
-        div{
+        button{
             width: auto;
             height: auto;
 
@@ -51,6 +51,8 @@
 
             display: flex;
             // justify-content: flex-start;
+            background: transparent;
+            border: none;
             align-items: center;
 
             cursor: pointer;
