--- a/src/components/Main/BoxGame/index.module.scss
+++ b/src/components/Main/BoxGame/index.module.scss
@@ -23,7 +23,7 @@
         }
 
         @media (max-width: 600px){
-            font-size: 70%;
+            font-size: 80%;
             padding: 1rem 0.5rem;
         }
 
@@ -65,6 +65,9 @@
 
             p{
                 margin-top: 1rem;
+                @media (max-width: 600px){
+                    margin-top: 0.7rem;
+                }
             }
 
             @media (max-width: 600px){
@@ -282,10 +285,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-left: 0.5rem;
 
             border: none;
 
-            background-color: #012742;
+            background-color: var(--background-button-dropdown);
 
             &:hover{
                 transform: scale(1.01);
