--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -118,19 +118,46 @@
                         justify-content: space-around;
                         align-items: center;
                         border-radius: 7px;
+
+                        .boxDots{
+                            width: 30px;
+                            height: 30px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+                            background: #083F66;
+                            border-radius: 5px;
+
+                            margin-right: 0.4rem;
+                            cursor: pointer;
+
+                            img{
+                                width: 50%;
+                                height: 50%;
+                            }
+
+                            &:hover{
+                                filter: brightness(0.9);
+                            }
+                        }
     
                         button{
                             height: 100%;
                             display: flex;
                             flex-direction: column;
-                            background-color: transparent;
+                            background: transparent;
                             border: none;
-                            padding: 0 1rem;
+                            margin: 0 1rem;
+                            overflow: hidden;
 
                             p{
                                 margin-top: 1.75rem;
                                 font-size: 16px;
                                 font-weight: 400;
+                                overflow: hidden;
+                                white-space: nowrap;
+                                text-overflow: ellipsis;
                             }
     
                             div{
