--- a/src/components/User/LoginRegister/index.module.scss
+++ b/src/components/User/LoginRegister/index.module.scss
@@ -131,9 +131,9 @@
 
             position: relative;
             img{
-                width: 20rem;
-                height: 20rem;
-                object-fit: contain;
+                width: 50rem;
+                height: 50rem;
+                object-fit: cover;
             }
         }
     }
