--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -85,9 +85,14 @@
       }
 
       img{
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
+        width: 42rem;
+        height: 42rem;
+
+        @media (max-width: 1200px){
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
 
