feat: starting modal game

--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -48,6 +48,7 @@
         .left{
             flex: 1;
             height: 100%;
+            position: relative;
             @media (max-width: 1200px){
                 display: none;
             }
