--- a/src/components/Dropdown/index.module.scss
+++ b/src/components/Dropdown/index.module.scss
@@ -7,7 +7,7 @@
 }
 
 .container{
-    width: auto;
+    width: 100%;
     height: 2rem;
 
     label{
@@ -34,6 +34,7 @@
         padding: 0.2rem 1rem;
 
         position: absolute;
+        margin-right: 10rem;
         border-radius: 10px;
 
         background: linear-gradient(180deg, rgba(10, 44, 82, 0.9) 0%, rgba(10, 44, 82, 0.8) 100%);
@@ -48,6 +49,7 @@
             height: auto;
 
             padding: 0 0.5rem;
+            margin: 0;
 
             display: flex;
             // justify-content: flex-start;
@@ -63,6 +65,12 @@
                 margin-top: 1rem;
                 margin-left: 0.5rem;
                 color: var(--light);
+            }
+
+            img{
+                width: 20px;
+                height: 20px;
+                object-fit: cover;
             }
 
             &:hover{
