--- a/src/components/Header/HeaderSecondary/index.module.scss
+++ b/src/components/Header/HeaderSecondary/index.module.scss
@@ -36,7 +36,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 1rem;
+            padding: 0;
             .box{
                 height: 100%;
                 display: flex;
@@ -88,6 +88,15 @@
     
                 cursor: pointer;
             }
+        }
+
+        .contentRight{
+            height: 100%;
+
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            margin-left: 4rem;
         }
     }
 
