--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -30,7 +30,7 @@
         width: 100%;
         height: 100%;
 
-        padding: 0 20px;
+        padding: 0 5px 0 20px;
 
         display: flex;
         justify-content: space-between;
