--- a/src/components/User/LoginRegister/index.module.scss
+++ b/src/components/User/LoginRegister/index.module.scss
@@ -18,6 +18,16 @@
     background: rgb(11,172,198);
     background: linear-gradient(180deg, rgba(11,172,198,1) 0%, rgba(49,93,167,1) 58%);
 
+    .closeButton{
+        width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        padding: 1rem 2rem;
+        position: absolute;
+        z-index: 999;
+    }
+
     .contentImageBlur{
         width: 100%;
         height: 100%;
@@ -42,8 +52,8 @@
     
                 position: relative;
                 img{
-                    width: 20rem;
-                    height: 20rem;
+                    width: 100%;
+                    height: 100%;
                     object-fit: contain;
                 }
             }
@@ -133,7 +143,7 @@
             img{
                 width: 50rem;
                 height: 50rem;
-                object-fit: cover;
+                object-fit: contain;
             }
         }
     }
