update: ajeitando a imagem da home para caber em dispositivos de até 720px de altura

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -85,7 +85,7 @@
 
       img{
         width: 42rem;
-        height: 42rem;
+        height: 100%;
 
         @media (max-width: 1200px){
           width: 100%;
