--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -142,6 +142,7 @@ body, input, textarea, select, button {
 
 h1, h2, h3, h4, h5, h6, p, label{
   color: var(--white);
+  font-family: 'Montserrat', sans-serif !important;
 
   transition: color 1s;
 }
