feat: Adicionando gestão de bancas e comentando todo o código

--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -150,6 +150,7 @@
                             background: transparent;
                             border: none;
                             margin: 0 1rem;
+                            padding: 0 0.5rem;
                             overflow: hidden;
 
                             p{
