--- a/src/components/Dropdown/index.module.scss
+++ b/src/components/Dropdown/index.module.scss
@@ -9,6 +9,7 @@
 .container{
     width: 100%;
     height: 2rem;
+    z-index: 2;
 
     label{
         width: auto;
@@ -59,10 +60,10 @@
 
             cursor: pointer;
 
-            p{
+            a{
                 font-weight: 300;
                 font-size: 15px;
-                margin-top: 1rem;
+                padding: 1rem 0;
                 margin-left: 0.5rem;
                 color: var(--light);
             }
