--- a/src/styles/gestao_banca.module.scss
+++ b/src/styles/gestao_banca.module.scss
@@ -13,6 +13,50 @@
     }
   }
 
+.contentDropdown{
+    max-width: 300px;
+    max-height: 10rem;
+
+    padding: 1rem 1rem;
+    background-color: #003256bd;
+
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+    justify-content: flex-start;
+
+    position: absolute;
+    top: 15rem;
+    left: 200px;
+    z-index: 999;
+
+    label{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: var(--light);
+
+        .divStart{
+            height: 100%;
+            
+        }
+
+        input{
+            width: 5rem;
+            height: 34px;
+            background-color: #003256;
+            border-radius: 8px;
+            outline: none;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            box-sizing: border-box;
+
+            padding: 0 1.5rem;
+        }
+    }
+}
+
 .container{
     width: 100%;
     height: 100%;
@@ -26,7 +70,7 @@
         width: 100%;
         height: 100%;
 
-        padding: 35px 40px;
+        padding: 35px 20px;
 
         .titleheader{
             width: 20rem;
@@ -75,11 +119,21 @@
             align-items: center;
             justify-content: space-between;
 
+            @media (max-width: 960px){
+                flex-direction: column;
+            }
+
             div:first-child{
                 flex: 1;
+                @media (max-width: 960px){
+                    justify-content: center !important;
+                }
             }
             div:last-child{
                 flex: 1;
+                @media (max-width: 960px){
+                    justify-content: center !important;
+                }
             }
     
             div{
@@ -97,12 +151,70 @@
                     justify-content: space-between;
     
                     border-radius: 10px;
-                    border: 1px solid rgba(255, 255, 255, 0.15);
                     box-sizing: border-box;
-                    background: linear-gradient(149.43deg, rgba(0, 43, 73, 0.8) 20.12%, rgba(0, 149, 255, 0.1) 98.85%);
+
+                    div{
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        p{
+                            font-size: 16px;
+                            font-weight: 400;
+                            margin-top: 0.01rem;
+                        }
+                    }
 
                     p{
-                        margin-top: 0.8rem;
+                        margin-top: 0.9rem;
+                        color: var(--light);
+                        cursor: pointer;
+                        position: relative;
+                        display: inline-block;
+                        height: 100%;
+                        line-height: 5rem;
+
+                        &.active::after{
+                            content: '';
+                            height: 4px;
+                            border-radius: 2px 5px 0 0;
+                            width: 100%;
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+
+                            font-weight: bold;
+                            background-color: var(--light); 
+                        }
+
+                        &:hover::after{
+                            content: '';
+                            height: 4px;
+                            border-radius: 2px 5px 0 0;
+                            width: 100%;
+                            position: absolute;
+                            bottom: 0;
+                            left: 0;
+
+                            font-weight: bold;
+                            background-color: var(--light);
+                        }
+                    }
+
+                    @media (max-width: 960px){
+                        padding: 0;
+                        max-width: none;
+                        p:nth-child(2){
+                            margin: 0 0.7rem;
+                        }
+                    }
+
+                    @media (max-width: 460px){
+                        p:nth-child(2){
+                            margin: 0 0.3rem;
+                        }
                     }
                 }
 
@@ -115,27 +227,38 @@
                     justify-content: space-between;
     
                     border-radius: 10px;
-                    border: 1px solid rgba(255, 255, 255, 0.15);
                     box-sizing: border-box;
-                    background: linear-gradient(149.43deg, rgba(0, 43, 73, 0.8) 20.12%, rgba(0, 149, 255, 0.1) 98.85%);
 
                     p{
                         margin-top: 0.8rem;
+                        color: var(--light);
+                        flex: 1;
                     }
 
-                    button{
-                        width: 29.97px;
-                        height: 30px;
-                        border: none;
-
-                        background: #083F66;
-                        border-radius: 5px;
-
-                        margin: 0 0.4rem;
-
-                        &:hover{
-                            filter: brightness(0.8);
+                    div{
+                        flex: 1;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        button{
+                            width: 29.97px;
+                            height: 30px;
+                            border: none;
+    
+                            background: var(--background-button-mobile);
+                            border-radius: 5px;
+    
+                            margin: 0 0.4rem;
+    
+                            &:hover{
+                                filter: brightness(0.8);
+                            }
                         }
+                    }
+
+                    @media (max-width: 960px){
+                        padding: 0;
+                        max-width: none;
                     }
                 }
 
@@ -149,12 +272,15 @@
 
                     padding: 2rem 1rem;
 
-                    background: linear-gradient(149.43deg, rgba(0, 43, 73, 0.8) 20.12%, rgba(0, 149, 255, 0.1) 98.85%);
-
-                    border: 1px solid rgba(255, 255, 255, 0.15);
                     box-sizing: border-box;
 
                     border-radius: 10px;
+
+                    @media (max-width: 960px){
+                        max-width: none;
+                        justify-content: space-around !important;
+                        margin-top: 1rem;
+                    }
 
                     div{
                         max-width: 34px;
@@ -177,11 +303,13 @@
                         p:first-child{
                             font-size: 14px;
                             color: #79C6FF;
+                            color: var(--light);
                         }
                         p:last-child{
                             font-size: 24px;
                             color: var(--white);
                             font-weight: 600;
+                            color: var(--light);
                         }
                     }
                 }
